new stream layout

--- a/src/styles/GenericStyles.css
+++ b/src/styles/GenericStyles.css
@@ -65,15 +65,52 @@ link:visited {
   width: min(7vw, 40px);
   display: inline-block;
 }
-
 .channels-and-content {
   position: relative;
   outline: 2px solid pink;
   display: grid;
   grid-template-columns: auto 1fr;
 }
+.generic-input-label {
+  font-size: min(2.2vw, 0.9rem);
+  display: block;
+  font-weight: bold;
+  padding-bottom: min(5px, 2vw);
+}
+.generic-input {
+  resize: none;
+  width: 100%;
+  background: var(--dark-white);
+  border: 2px solid var(--dark-white);
+  transition: background 0.2s, border 0.2s;
+}
+.generic-input:hover {
+  border: 2px solid var(--dark-white-hover);
+}
+.generic-input:focus {
+  outline: none !important;
+  border: 2px solid var(--main-color);
+  background: var(--white);
+}
+.generic-input-length {
+  text-align: right;
+  color: rgb(90, 90, 90);
+}
 .content {
   background-color: #f7f7f8;
   height: inherit;
   overflow-y: scroll;
+}
+.main-color-btn {
+  color: var(--white);
+  background: var(--main-color);
+}
+.main-color-btn:hover {
+  background-color: var(--main-color-hover);
+}
+.dark-white-btn {
+  background-color: var(--dark-white);
+}
+.dark-white-btn:hover {
+  background-color: var(--dark-white-hover);
 }
